--- a/utilizando-web-API/package.json
+++ b/utilizando-web-API/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "adb": "^0.2.0",
     "axios": "^1.2.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-paper": "^5.1.3",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.7.0"
